--- a/content/prose/011.md
+++ b/content/prose/011.md
@@ -1,1 +1,1 @@
-How else could we taste such sweet, sweet victory. Here you see my training run complete and my GPT-2 validation loss at the same levels as Karpathy's.
+How else could we taste such sweet, sweet victory? Here you see my training run complete and my GPT-2 validation loss at the same levels as Karpathy's.
